--- a/tabler/package.json
+++ b/tabler/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.9",
+    "lucide-react": "^0.525.0",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-color": "^2.19.3",
